--- a/layouts/partials/widgets/toc.html
+++ b/layouts/partials/widgets/toc.html
@@ -3,6 +3,6 @@
   <header class="heading">
     <p class="title is-6">Table of Contents</p>
   </header>
-  <div class="content">{{ .TableOfContents }}</div>
+  <div class="is-clearfix">{{ .TableOfContents }}</div>
 </div>
 {{ end }}
