--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,4 +12,6 @@
   </head>
   <body>
     {{ partial "navbar.html" . }}
-    <div class="section columns">
+    <div class="section">
+      <div class="container">
+        <div class="columns">
