--- a/layouts/partials/widgets/paginator.html
+++ b/layouts/partials/widgets/paginator.html
@@ -1,7 +1,7 @@
 {{ if or (.Paginator.HasPrev) (.Paginator.HasNext) }}
 <nav class="pagination is-centered">
 	{{- if .Paginator.HasPrev }}
-	<a class="pagination-previous" href="{{ .Paginator.Prev.URL }}">«</a>
+	<a class="pagination-previous" href="{{ .Paginator.Prev.URL }}">Previous</a>
 	{{- end }}
   <ul class="pagination-list">
     {{- if lt .Paginator.TotalPages 10 }}
@@ -19,7 +19,7 @@
     {{- end }}
   </ul>
 	{{- if .Paginator.HasNext }}
-	<a class="pagination-next" href="{{ .Paginator.Next.URL }}">»</a>
+	<a class="pagination-next" href="{{ .Paginator.Next.URL }}">Next</a>
 	{{- end }}
 </nav>
 {{ end }}
