just needs the Single page for v0.01

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,5 +3,11 @@
 </div> 
 <!-- close columns div from header -->
 <footer class="footer">
-  footer stuff
+  <div class="container">
+    <div class="content has-text-centered">
+      <p>
+        &copy; N.Boughton 2017, Menhir theme by N.Boughton
+      </p>
+    </div>
+  </div>
 </footer>
