--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
   {{- range .Paginator.Pages }}
   {{ partial "list_item.html" . }}
   {{- end }}
-  {{ partial "widgets/paginator.html" . }}
+  {{ partial "widgets/page_paginator.html" . }}
 </div>
 {{ partial "sidebar.html" . }}
 {{ partial "footer.html" . }}
