Added example site and finished page pagination

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,9 +5,8 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
-      <p>
-        &copy; N.Boughton 2017, Menhir theme by N.Boughton
-      </p>
+      <p>&copy; {{ .Site.Author.name }} 2017</p>
+      <p>Menhir theme by N.Boughton</p>
     </div>
   </div>
 </footer>
