--- a/layouts/partials/widgets/post_paginator.html
+++ b/layouts/partials/widgets/post_paginator.html
@@ -1,20 +1,26 @@
 {{ if or (.Prev) (.Next) }}
+{{ $currentSection := .Section }}
 <nav class="pagination is-centered">
-	{{- if .Prev }}
-	<a class="pagination-previous" href="{{ .Prev.URL }}">
+	{{- with .Prev }}
+  {{- if eq $currentSection .Section }}
+	<a class="pagination-previous" href="{{ .URL }}">
     <span class="icon">
       <i class="fa fa-angle-double-left"></i>
     </span>
-    &nbsp;{{ .Prev.Title }}
+    &nbsp;{{ .Title | truncate 20 }}
   </a>
+  {{- end }}
 	{{- end }}
-	{{- if .Next }}
-	<a class="pagination-next" href="{{ .Next.URL }}">
-    {{ .Next.Title }}&nbsp;
+
+	{{- with .Next }}
+  {{ if eq $currentSection .Section }}
+	<a class="pagination-next" href="{{ .URL }}">
+    {{ .Title | truncate 20 }}&nbsp;
     <span class="icon">
       <i class="fa fa-angle-double-right"></i>
     </span>
   </a>
+  {{- end }}
 	{{- end }}
 </nav>
 {{ end }}
