--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,7 @@
 {{ partial "header.html" . }}
 <div class="column is-two-thirds">
-  {{- range .Paginator.Pages }}
+  {{ $paginator := .Paginate (where .Data.Pages "Section" "in" (.Site.Params.postSections | default (slice "blog")))}}
+  {{- range $paginator.Pages }}
   {{ partial "list_item.html" . }}
   {{- end }}
   {{ partial "widgets/page_paginator.html" . }}
