added categories and tags widgets

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,4 +1,6 @@
 <div class="column is-one-third">
   {{ partial "widgets/toc.html" . }}
   {{ partial "widgets/recent.html" . }}
+  {{ partial "widgets/categories.html" . }}
+  {{ partial "widgets/tags.html" . }}
 </div>
