--- a/layouts/partials/widgets/tags.html
+++ b/layouts/partials/widgets/tags.html
@@ -7,7 +7,7 @@
 	<div class="content">
 		{{- range $name, $items := . -}}
     <span class="tag is-small is-white">
-      <a href="{{ "tags/" | relLangURL }}{{ $name | urlize | lower }}">{{ $name | upper }}</a>
+      <a href="{{ "tags/" | relLangURL }}{{ $name | urlize | lower }}">{{ $name | humanize | upper }}</a>
     </span>
 		{{- end }}
 	</div>
