--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,6 +9,7 @@
       {{ .Content }}
     </div>
     {{ partial "widgets/post_paginator.html" . }}
+    {{ partial "author.html" . }}
     {{ partial "comments.html" . }}
   </div>
 </div>
