--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <p>&copy; {{ .Site.Author.name }} 2017</p>
-      <p>[Menhir theme](https://github.com/nboughton/menhir) by N.Boughton</p>
+      <p><a href="https://github.com/nboughton/menhir">Menhir theme</a> by N.Boughton</p>
     </div>
   </div>
 </footer>
