--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,6 +3,8 @@
 </div> 
 <!-- close columns div from header -->
 <footer class="footer">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
+  <script src="/js/site.min.js"></script>
   <div class="container">
     <div class="content has-text-centered">
       <p>&copy; {{ .Site.Author.name }} 2017</p>
