--- a/layouts/partials/list_item.html
+++ b/layouts/partials/list_item.html
@@ -6,6 +6,6 @@
     <p class="subtitle is-6">{{.Date.Format "January 02, 2006"}}</p>
   </header>
   <div class="content">
-    {{ .Summary }}
+    {{ .Summary | truncate 200 }}
   </div>
 </article>
