--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,6 +5,12 @@
 <footer class="footer">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
   <script src="/js/site.min.js"></script>
+  {{- range .Site.Params.custom_js }}
+  <script src="/js/{{ . }}" /></script>
+  {{- end }}
+  {{- range .Params.custom_js }}
+  <script src="/js/{{ . }}" /></script>
+  {{- end }}
   <div class="container">
     <div class="content has-text-centered">
       <p>&copy; {{ .Site.Author.name }} 2017</p>
