--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,9 +23,11 @@
           <h1 class="title">
             <a href="/">{{ .Site.Title | upper }}</a>
           </h1>
+          {{- with .Site.Params.subtitle }}
           <h2 class="subtitle">
-            {{ .Site.Params.subtitle }}
+            {{ . }}
           </h2>
+          {{- end }}
         </div>
       </div>
       {{ partial "navbar.html" . }}
