shrunk header subtitle

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -24,7 +24,7 @@
             <a href="/">{{ .Site.Title | upper }}</a>
           </h1>
           {{- with .Site.Params.subtitle }}
-          <h2 class="subtitle">
+          <h2 class="subtitle is-6">
             {{ . }}
           </h2>
           {{- end }}
