modified header to put nav in hero-foot

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -30,7 +30,9 @@
           {{- end }}
         </div>
       </div>
+      <div class="hero-foot">
       {{ partial "navbar.html" . }}
+      </div>
     </section>
     <div class="section">
       <div class="container">
