--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,5 +1,5 @@
 
-<nav class="nav container">
+<nav class="nav container is-fullwidth">
   <div class="nav-left">
     {{- if .Site.Menus.main }}
 		{{- range sort .Site.Menus.main }}
