put year in footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,7 +13,7 @@
   {{- end }}
   <div class="container">
     <div class="content has-text-centered">
-      <p>&copy; {{ .Site.Author.name }} 2017</p>
+      <p>&copy; {{ .Site.Author.name }} {{ now.Year }}</p>
       <p><a href="https://github.com/nboughton/menhir">Menhir theme</a> by N.Boughton</p>
     </div>
   </div>
